幼稚園追加・プルダウン修正

--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@ function openStreetMapLayer (){
 	//OSMの明度を下げる
 
 	openStreetMap.brightness = 0.7;
-    openStreetMap.saturation = 0.2;
+    openStreetMap.saturation = 0.5;
 
 	//OSMの不透明度をデフォルト0に
 
-	openStreetMap.alpha = 1;
+	openStreetMap.alpha = 0.6;
 
 	//オーバーレイ配列作成関数
 
@@ -548,7 +548,132 @@ var options = [{},
     url : 'data/kml/circle.glb',
     latitude : 35.6666794,
     longitude : 139.3807137
-},
+},{
+    text : 'ひらやま保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6501036,
+    longitude : 139.3762427
+},{
+    text : 'つくしんぼ保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.663283,
+    longitude : 139.4018593
+},{
+    text : '日野保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6807414,
+    longitude : 139.3912004
+},{
+    text : '日野第二保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6723904,
+    longitude : 139.4064112
+},{
+    text : '日野わかば保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6489765,
+    longitude : 139.4055376
+},{
+    text : '吹上保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6641186,
+    longitude : 139.3864273
+},{
+    text : 'ひよこハウス多摩平',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6612522,
+    longitude : 139.3789586
+},{
+    text : '万願寺保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6734268,
+    longitude : 139.418685
+},{
+    text : '日野わかば保育園　高幡分園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6611102,
+    longitude : 139.4136042
+},{
+    text : '吹上保育園　旭が丘分園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6589819,
+    longitude : 139.3610513
+},{
+    text : 'たかはた北保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6646248,
+    longitude : 139.4130832
+},{
+    text : 'ひよこハウス豊田',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6550585,
+    longitude : 139.3782645
+},{
+    text : '至誠第二保育園　日野本町分園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6768593,
+    longitude : 139.3996755
+},{
+    text : '栄光保育園　南平分園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6545615,
+    longitude : 139.392194
+},{
+    text : '吹上保育園　豊田分園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6579443,
+    longitude : 139.3836251
+},{
+    text : 'しせい太陽の子保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.677309,
+    longitude : 139.3931178
+},{
+    text : '至誠あずま保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6790871,
+    longitude : 139.4075137
+},{
+    text : '吹上多摩平保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6692652,
+    longitude : 139.3896239
+},{
+    text : '栄光平山台保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6409852,
+    longitude : 139.3870786
+},{
+    text : '日野駅前かわせみ保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6799043,
+    longitude : 139.3947717
+},{
+    text : '栄光豊田駅前保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.660394,
+    longitude : 139.3806835
+},{
+    text : '芝原保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6568611,
+    longitude : 139.3866499
+},{
+    text : '至誠いしだ保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6749906,
+    longitude : 139.4196238
+},{
+    text : 'むこうじま保育園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6651193,
+    longitude : 139.4160107
+},{
+    text : '日野・多摩平幼稚園',
+    url : 'data/kml/circle.glb',
+    latitude : 35.6629576,
+    longitude : 139.3822582
+}
 ];
 
 var optionNumber;
