--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	/>
 	<meta property="og:description" content="Cesiumを使った日野市オープンデータ可視化のサンプルです" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	<title>日野市オープンデータ可視化</title>
+	<title>日野市子どもカレンダーマップ</title>
 	<link rel="alternate" href="http://hiroshima.archiving.jp/index_en.html" hreflang="en" />
 	<link rel="SHORTCUT ICON" href="http://shinsai.mapping.jp/favicon.ico">
 	<style>
@@ -129,9 +129,9 @@ function kmlData(_label, _url) {
 
 var kmlDataArray=[];
 kmlDataArray[0]=new kmlData("第1週",'data/kml/dec1.kml');
-kmlDataArray[1]=new kmlData("第2週",'data/kml/dec2.kml');
-kmlDataArray[2]=new kmlData("第3週",'data/kml/dec3.kml');
-kmlDataArray[3]=new kmlData("第4週",'data/kml/dec4.kml');
+//kmlDataArray[1]=new kmlData("第2週",'data/kml/dec2.kml');
+//kmlDataArray[2]=new kmlData("第3週",'data/kml/dec3.kml');
+//kmlDataArray[3]=new kmlData("第4週",'data/kml/dec4.kml');
     
 //オーバレイ配列を用意
 
